--- a/runaway2/runaway2.vcxproj.filters
+++ b/runaway2/runaway2.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Func.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="MATRIX.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Quaternion.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseScene.h">
